project/tests/in_progress/for_main/good/types/complex_types/struct/struct01.c
//clang -Xclang -ast-dump -fsyntax-only main.cpp
struct st{
  int a;
};

int main() {
  struct st obj1;
  return 0;
}
