project/tests/in_progress/for_main/bad/operations/inc_dec/post_dec_char.c
//clang -Xclang -ast-dump -fsyntax-only main.c
#include <stdio.h>

char e = 'z';

int main() {
  e--;
  printf("%c\n", e);
  e;

  return 0;
}
